--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Hoja de estilo-->
     <link rel="stylesheet" href="style.css">
+    <!--TipoDeLetra-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100;200;300&display=swap" rel="stylesheet">
     <title>Home</title>
 </head>
 <body>
@@ -28,87 +33,100 @@
 <!--Cuerpo-->
 <main>
 <!--Portada-->
-<div>
-    <img src="./assets/padel-intro.png" alt="deportista">
-    <p>LIVE: Follow the Telcel Huawei Mexico Open 2022 for free</p>
-    <p>The final Open of the 2022 World Padel Tour season is underway, don't miss out on any of the action!</p>
-    <button type="submit" id="btn-contacto">Contact</button>
+<div class="portada">
+    <img src="./assets/padel-intro.png" alt="deportista" width="540px" height="461px">
+    <div class="cont-1">
+        <h1>LIVE: Follow the Telcel Huawei Mexico Open 2022 for free</h1>
+        <p class="letra1">The final Open of the 2022 World Padel Tour season is underway, don't miss out on any of the action!</p>
+        <button type="submit" id="btn-contacto">Contact</button>
+    </div>
 </div>
-<!--Seccion-->
+<!--franja1-->
 <div class="franja">
-    <p>What's different between pros?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet consequat purus sit amet sodales. In faucibus ut nisi eu dignissim. Vestibulum fringilla velit sed tincidunt tincidunt.</p>
+    <h2>What's different between pros?</h2>
+    <p class="subcont">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet consequat purus sit amet sodales. In faucibus ut nisi eu dignissim. Vestibulum fringilla velit sed tincidunt tincidunt.</p>
 </div>
-<div>
-    <div>
-        <p>1</p>
-        <p>Track company-wide progress</p>
-        <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor.</p>
+<div class="contenedor1">
+    <div class="subcount1">
+        <div class="cont1">
+            <div class="prueba1">
+                <button type="submit" id="btn-contacto3">01</button>
+                <h5>Track company-wide progress</h5>
+                <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor.</p>
+            </div>
+        </div>
+        <div class="cont1">
+            <div class="prueba1">
+                <button type="submit" id="btn-contacto3">02</button>
+                <h5>Advance built-in reports</h5>
+                <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor.</p>
+            </div>
+        </div>
     </div>
-    <div>
-        <p>1</p>
-        <p>Track company-wide progress</p>
-        <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor.</p>
+    <div class="cont1">
+        <div class="prueba1">
+            <button type="submit" id="btn-contacto3">03</button>
+            <h5>Everything you need in one place</h5>
+            <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor.</p>
+        </div>
     </div>
-    <div>
-        <p>1</p>
-        <p>Track company-wide progress</p>
-        <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor.</p>
-   </div>
 </div>
-<div>
-    <p>Best of the month</p>
-    <div>
-        <img src="" alt="">
-        <p>Sanyo</p>
-        <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-    </div>
-    <div>
-        <img src="" alt="">
-        <p>Lebron</p>
-        <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-    </div>
-    <div>
-        <img src="" alt="">
-        <p>Navarro</p>
-        <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+<!------------------------------------------------------------------------------------->
+<div class="contenedor2">
+    <h3>Best of the month</h3>
+    <div class="cont2">
+        <div>
+            <img src="./assets/avatar-sanyo.png" alt="sanyo" class="img123">
+            <h5>Sanyo</h5>
+            <p class="p1">Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+        </div>
+        <div>
+            <img src="./assets/avatar.lebron.png" alt="lebron" class="img123">
+            <h5>Lebron</h5>
+            <p class="p1">Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+        </div>
+        <div>
+            <img src="./assets/avatar-navarro.png" alt="navarro" class="img123">
+            <h5>Navarro</h5>
+            <p class="p1">Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+        </div>
     </div>
     <button type="submit" id="btn-contacto">More</button>
-
 </div>
-<div class="franja2">
-    <p>Get to know the best teams of the year</p>
-    <p>Go for it</p>
+<div class="franja">
+    <h2>Get to know the best teams of the year</h2>
+    <button type="submit" id="btn-contacto2">Go for it</button>
 </div>
 </main>
 <!--Footer-->
 <footer>
     <div>
         <div class="Logo">
-            <h3>Sportit</h3>
-            <img src="./assets/logo.svg" alt="logo">
+        <img src="./assets/Group 5.png" alt="logo">
         </div>
     </div>
-    <div>
+    <div class="listfooter">
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Home</li>
+            <li>Pricing</li>
+            <li>Products</li>
+            <li>About Us</li>
         </ul>
+    </div>
+    <div class="listfooter">
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Trainning</li>
+            <li>Community</li>
+            <li>Privacy Policy</li>
         </ul>
     </div>
     <div>
-
+        <form class="update-form">
+            <input type="text" class="update-input" placeholder="Update in your inbox..." />
+            <button type="submit" id="btn-contacto">Go</button>
+        </form>
+        <p class="letra2">Copyright 2023. All Rights Reserved</p>
     </div>
-
-    <p>Copyright 2023. All Rights Reserved</p>
-
 </footer>
 </body>
 </html>
