--- a/pruebas.html
+++ b/pruebas.html
@@ -12,6 +12,12 @@
         <input type="email" name="email" placeholder="Email" required>
         <textarea name="mensaje" placeholder="Mensaje" required></textarea>
         <button type="submit" id="btn-contacto">Enviar</button>
-      </form>      
+      </form>
+      
+      
+      <form class="update-form">
+        <input type="text" class="update-input" placeholder="Update in your inbox..." />
+        <button type="submit" class="go-button">Go</button>
+      </form>
 </body>
-</html>git config --global user.email "anamachadomesa@gmail.com"
+</html>
