termine la entrega, tueve el error de empezar por desktop y no por mobile

--- a/cel.html
+++ b/cel.html
@@ -35,7 +35,7 @@
 <main>
 <!--Portada-->
 <div class="portada">
-    <img src="./assets/padel-intro.png" alt="deportista" class="img" width="540px" height="461px">
+    <img src="./assets/padel-intro.png" alt="deportista" class="img">
     <div class="cont-1">
         <h1>LIVE: Follow the Telcel Huawei Mexico Open 2022 for free</h1>
         <p class="letra1">The final Open of the 2022 World Padel Tour season is underway, don't miss out on any of the action!</p>
@@ -102,15 +102,15 @@
 <!--Footer-->
 <footer>
     <div>
-        <div class="Logo">
+        <div class="Logo2">
         <img src="./assets/Group 5.png" alt="logo">
         </div>
         <div class="iconos">
-          <img src="./assets/icon-facebook.svg" alt="icon">
-          <img src="./assets/icon-youtube.svg" alt="icon">
-          <img src="./assets/icon-twitter.svg" alt="icon">
-          <img src="./assets/icon-pinterest.svg" alt="icon">
-          <img src="./assets/icon-instagram.svg" alt="icon">
+          <img src="./assets/icon-facebook.svg" alt="icon" class="imgicon">
+          <img src="./assets/icon-youtube.svg" alt="icon" class="imgicon">
+          <img src="./assets/icon-twitter.svg" alt="icon" class="imgicon">
+          <img src="./assets/icon-pinterest.svg" alt="icon" class="imgicon">
+          <img src="./assets/icon-instagram.svg" alt="icon" class="imgicon">
         </div>
     </div>
     <div class="listfooter">
@@ -128,7 +128,7 @@
             <li>Privacy Policy</li>
         </ul>
     </div>
-    <div class="prueba2">
+    <div class="foot2">
         <form class="update-form">
             <input type="text" class="update-input" placeholder="Update in your inbox..." />
             <button type="submit" id="btn-contacto">Go</button>
