--- a/cel.html
+++ b/cel.html
@@ -20,11 +20,11 @@
     <nav>
       <a href="#" class="logo-link"><img src="./assets/icon-hamburger.svg" alt="Logo" class="logo-img"></a>
         <ul class="menu">
-          <li>Sports</li>
-          <li>Products</li>
-          <li>About Us</li>
-          <li>Training</li>
-          <li>Community</li>
+          <li><a href="#">Sports</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Training</a></li>
+          <li><a href="#">Community</a></li>
         </ul>
     </nav>
     <div id="btn-container">
